--- a/style.css
+++ b/style.css
@@ -53,15 +53,13 @@ iframe {
     height: 100%;
 }
 
-#content p {
+#content #serif {
+    margin: 1em 2em;
     font-weight: normal;
     font-size: 2.5em;
-    font-family: "IBM Plex Serif", Georgia;
-    margin: 1em 2em;
+    font-family: "IBM Plex Serif", Georgia;    
 }
 
-#serif {
-    
 }
 
 #sidebar {
