--- a/style.css
+++ b/style.css
@@ -55,10 +55,11 @@ iframe {
 }
 
 #content #serif {
-    margin: 1em 2em;
+    margin: 2em auto 1em auto;
     font-weight: normal;
     font-size: 2.5em;
     font-family: "IBM Plex Serif", Georgia;
+    max-width: 18em;
 }
 
 #content h2 {
