--- a/style.css
+++ b/style.css
@@ -64,9 +64,19 @@ iframe {
 
 #content h2 {
     margin: 5% 10%;
+}
+
+h2:after {
+    content: "";
+    display: block;
+    margin: 0 auto 0 0;
+    width: 5%;
+    padding-top: 0.3em;
     border-bottom: 3px #fff solid;
-    width: 3%;
-    padding: 0 0 0.3em 0;
+}
+
+#sidebar h2:after {
+    width: 10%;
 }
 
 #collateral ul {
@@ -85,9 +95,7 @@ iframe {
 
 #sidebar h2 {
     font-size: 1em;
-    border-bottom: 3px #fff solid;
-    width: 27%;
-    padding: 1em 0 0.3em 0;
+    padding: 1em 0 0 0;
 }
 
 #sidebar h3 {
