--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ h2:after {
     display: grid;
     grid-gap: 0.5em;
     margin: 10%;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(12em, 1fr));
     grid-auto-rows: minmax(100px, auto);
 }
 
